--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
+    "@hallysonh/ngx-imageviewer": "^2.0.4",
+    "@types/lodash": "^4.14.110",
     "angular-cli-ghpages": "^0.5.2",
     "core-js": "^2.4.1",
-    "lodash": "^4.17.5",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.10",
+    "ngx-gallery": "^5.5.1",
     "rxjs": "^6.2.1",
-    "zone.js": "^0.8.19",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
@@ -44,11 +50,11 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-image-gallery": "^1.3.1",
     "node-sass": "^4.7.2",
     "protractor": "^5.3.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "~2.7.2"
   }
 }
