--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,8 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/scss/styles.scss",
-              "./node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "src/scss/styles.scss"
             ],
             "scripts": [
               "./node_modules/lodash/lodash.js"
