--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/lodash": "^4.14.110",
     "angular-cli-ghpages": "^0.5.2",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
     "ngx-gallery": "^5.5.1",
@@ -38,6 +37,7 @@
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
