--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
     "ngx-gallery": "^5.5.1",
+    "ngx-page-scroll": "^5.0.0",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.19"
