added scroll-reveal and config

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/scss/styles.scss"
             ],
             "scripts": [
+              "./node_modules/scrollreveal/dist/scrollreveal.js",
               "./node_modules/lodash/lodash.js"
             ]
           },
