--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             ],
             "scripts": [
               "./node_modules/scrollreveal/dist/scrollreveal.js",
-              "./node_modules/lodash/lodash.js"
+              "./node_modules/lodash/lodash.js",
+              "./node_modules/angular-runkit/dist/index.js"
             ]
           },
           "configurations": {
