--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@types/lodash": "^4.14.114",
     "angular-cli-ghpages": "^0.5.2",
+    "angular-runkit": "^0.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
