--- a/package.json
+++ b/package.json
@@ -24,27 +24,28 @@
     "@angular/router": "^6.1.0",
     "@types/lodash": "^4.14.114",
     "angular-cli-ghpages": "^0.5.2",
+    "angular-in-memory-web-api": "^0.8.0",
     "angular-runkit": "^0.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "ng-scrollreveal": "^2.2.0",
     "ngx-gallery": "^5.6.1",
     "ngx-page-scroll": "^5.0.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "6.3.3",
     "rxjs-compat": "^6.2.2",
     "scrollreveal": "^3.4.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.13.3",
     "@angular/cli": "^6.1.1",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.114",
+    "@types/node": "^6.14.3",
     "@types/scrollreveal": "0.0.3",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
@@ -54,7 +55,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.11.0",
     "protractor": "^5.4.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
