--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod && angular-cli-ghpages --branch master"
+    "deploy": "ng build --prod && npx angular-cli-ghpages --branch master"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
+    "@angular/compiler": "^6.1.10",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@types/lodash": "^4.14.114",
+    "@types/lodash": "4.14.108",
+    "ajv": "^6.10.0",
     "angular-cli-ghpages": "^0.5.2",
     "angular-in-memory-web-api": "^0.8.0",
     "angular-runkit": "^0.6.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.6.5",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "ng-scrollreveal": "^2.2.0",
@@ -35,19 +36,19 @@
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.2.2",
     "scrollreveal": "^3.4.0",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.3",
-    "@angular/cli": "^6.1.1",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@fortawesome/fontawesome-free": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.14.3",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^6.2.9",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.4",
     "@types/scrollreveal": "0.0.3",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
@@ -56,7 +57,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.11.0",
-    "protractor": "^5.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
