--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "@angular/platform-browser-dynamic": "^9.1.1",
     "@angular/router": "^9.1.1",
     "@types/lodash": "4.14.108",
-    "ajv": "^6.10.0",
+    "ajv": "^6.12.0",
     "angular-cli-ghpages": "^0.6.2",
     "angular-in-memory-web-api": "^0.8.0",
     "angular-runkit": "^0.6.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.11",
+    "fibers": "^4.0.2",
     "hammerjs": "^2.0.8",
+    "html-webpack-plugin": "^4.2.0",
     "lodash": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
-    "ngx-gallery": "^5.6.1",
+    "ngx-gallery": "^5.10.0",
     "ngx-page-scroll": "^5.0.0",
     "rxjs": "6.5.5",
-    "rxjs-compat": "^6.2.2",
+    "rxjs-compat": "^6.5.5",
     "scrollreveal": "^3.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -43,9 +45,9 @@
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "^9.1.1",
-    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "@types/scrollreveal": "0.0.3",
     "codelyzer": "^5.1.2",
@@ -57,7 +59,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.13.1",
-    "protractor": "^5.4.2",
+    "protractor": "^5.4.3",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~3.8.3"
