--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "@angular/platform-browser": "^9.1.1",
     "@angular/platform-browser-dynamic": "^9.1.1",
     "@angular/router": "^9.1.1",
-    "@types/lodash": "4.14.108",
+    "@types/lodash": "4.14.149",
     "ajv": "^6.12.0",
     "angular-cli-ghpages": "^0.6.2",
-    "angular-in-memory-web-api": "^0.8.0",
+    "angular-in-memory-web-api": "^0.10.0",
     "angular-runkit": "^0.6.0",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "fibers": "^4.0.2",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^4.2.0",
     "lodash": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
     "ngx-gallery": "^5.10.0",
-    "ngx-page-scroll": "^5.0.0",
+    "ngx-page-scroll": "^7.0.1",
+    "ngx-page-scroll-core": "^7.0.1",
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.5.5",
-    "scrollreveal": "^3.4.0",
+    "scrollreveal": "^4.0.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -46,22 +47,22 @@
     "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "^9.1.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@types/jasmine": "^2.8.16",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "@types/scrollreveal": "0.0.3",
+    "@types/node": "^13.11.1",
+    "@types/scrollreveal": "0.0.6",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.1",
+    "karma": "^5.0.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "node-sass": "^4.13.1",
     "protractor": "^5.4.3",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "ts-node": "~8.8.2",
+    "tslint": "~6.1.1",
     "typescript": "~3.8.3"
   }
 }
