--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser": "^9.1.1",
     "@angular/platform-browser-dynamic": "^9.1.1",
     "@angular/router": "^9.1.1",
-    "@types/lodash": "4.14.149",
+    "@kolkov/ngx-gallery": "^1.1.0",
+    "@types/lodash-es": "^4.17.3",
     "ajv": "^6.12.0",
     "angular-cli-ghpages": "^0.6.2",
     "angular-in-memory-web-api": "^0.10.0",
@@ -31,7 +32,7 @@
     "fibers": "^4.0.2",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^4.2.0",
-    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
     "ngx-gallery": "^5.10.0",
     "ngx-page-scroll": "^7.0.1",
