--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "node-sass": "^4.13.1",
+    "sass": "^1.00.0",
     "protractor": "^5.4.3",
     "ts-node": "~8.8.2",
     "tslint": "~6.1.1",
