--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/animations": "^9.1.1",
-    "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@kolkov/ngx-gallery": "^1.1.0",
     "@types/lodash-es": "^4.17.3",
     "ajv": "^6.12.0",
@@ -40,13 +40,13 @@
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.5.5",
     "scrollreveal": "^4.0.6",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.1",
-    "@angular/language-service": "^9.1.1",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
@@ -54,16 +54,16 @@
     "@types/scrollreveal": "0.0.6",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.1",
-    "karma": "^5.0.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "sass": "^1.00.0",
-    "protractor": "^5.4.3",
+    "protractor": "~7.0.0",
     "ts-node": "~8.8.2",
-    "tslint": "~6.1.1",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.8"
   }
 }
