--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular-devkit/build-angular": "^0.1102.19",
     "@angular/animations": "^11.2.14",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "^11.2.14",
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
-    "@kolkov/ngx-gallery": "1.2.2",
+    "@kolkov/ngx-gallery": "^1.2.2",
     "@types/lodash-es": "^4.17.3",
     "ajv": "^6.12.0",
     "angular-cli-ghpages": "^0.6.2",
@@ -35,8 +35,8 @@
     "lodash-es": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
     "ngx-gallery": "^5.10.0",
-    "ngx-page-scroll": "^8.0.1",
-    "ngx-page-scroll-core": "^8.0.1",
+    "ngx-page-scroll": "^8.0",
+    "ngx-page-scroll-core": "^8.0",
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.5.5",
     "scrollreveal": "^4.0.6",
@@ -60,8 +60,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "sass": "^1.00.0",
     "protractor": "~7.0.0",
+    "sass": "^1.00.0",
     "ts-node": "~8.8.2",
     "tslint": "~6.1.0",
     "typescript": "~4.0.8"
