--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "angular-in-memory-web-api": "^0.10.0",
     "angular-runkit": "^0.6.0",
     "core-js": "^3.6.5",
+    "glightbox": "^3.3.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^4.2.0",
     "lodash-es": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
     "ngx-gallery": "^5.10.0",
-    "ngx-page-scroll": "^8.0",
-    "ngx-page-scroll-core": "^8.0",
+    "ngx-page-scroll": "^9.0",
+    "ngx-page-scroll-core": "^9.0",
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.5.5",
     "scrollreveal": "^4.0.6",
