add eras, cleanup routes, remove glightbox

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
     "importHelpers": true,
-    "module": "es2020",
+    "module": "es6",
+    "target": "es5",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
