--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@kolkov/ngx-gallery": "^2.0.1",
     "@types/lodash-es": "^4.17.3",
     "ajv": "^6.12.0",
     "angular-cli-ghpages": "^0.6.2",
     "angular-in-memory-web-api": "^0.10.0",
     "angular-runkit": "^0.6.0",
     "core-js": "^3.6.5",
-    "glightbox": "^3.3.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^4.2.0",
+    "lightgallery": "^2.7.2",
     "lodash-es": "^4.17.15",
     "ng-scrollreveal": "^2.2.0",
-    "ngx-gallery": "^5.10.0",
     "ngx-page-scroll": "^10.0",
     "ngx-page-scroll-core": "^10.0",
     "rxjs": "6.5.5",
