--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.5.5",
     "scrollreveal": "^4.0.6",
+    "swiper": "^11.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.8"
   },
